Work in progress, messy commit

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .body {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,7 +12,7 @@
   color: white;
 }
 
-.form > div {
+.contactForm > div {
   display: grid;
   grid-template-columns: 13rem auto;
   text-align: left;
@@ -31,15 +20,15 @@
   align-items: center;
 }
 
-.form > div> label {
+.contactForm > div> label {
   font-weight: bold;
 }
 
-.form > div > input {
+.contactForm > div > input {
   height: 1.3rem
 }
 
-.content> div {
+.contactContent> div {
   display: grid;
   grid-template-columns: 13rem auto;
   text-align: left;
@@ -47,19 +36,34 @@
   align-items: center;
 }
 
-.content > div > label{
+.contactContent > div > label{
   font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.educationForm > div {
+  display: grid;
+  grid-template-columns: 16rem auto;
+  text-align: left;
+  height: 3rem;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.educationForm > div> label {
+  font-weight: bold;
+}
+
+.educationtForm > div > input {
+  height: 1.3rem
+}
+
+.educationContent> div {
+  display: grid;
+  grid-template-columns: 16rem auto;
+  text-align: left;
+  height: 3rem;
+  align-items: center;
+}
+
+.educationContent > div > label{
+  font-weight: bold;
 }
